# apex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
apps/apex/: Cargo.toml
apps/apex-cli/: Cargo.toml
apps/apex-cli/src/: main.rs
apps/apex/src/: main.rs
assets/icons/: README.md
assets/themes/: README.md
assets/translations/: README.md
crates/apex-ai/: Cargo.toml
crates/apex-ai/src/: lib.rs
crates/apex-auth/: Cargo.toml  README.md
crates/apex-auth/src/: lib.rs
crates/apex-contracts/: Cargo.toml  README.md
crates/apex-contracts/src/: lib.rs
crates/apex-domain/: Cargo.toml
crates/apex-domain/src/: lib.rs
crates/apex-export/: Cargo.toml  README.md
crates/apex-export/src/: lib.rs
crates/apex-git/: Cargo.toml  README.md
crates/apex-git/src/: lib.rs
crates/apex-history/: Cargo.toml  README.md
crates/apex-history/src/: diff.rs  lib.rs  snapshot.rs
crates/apex-http/: Cargo.toml  README.md
crates/apex-http/src/: lib.rs
crates/apex-import/: Cargo.toml
crates/apex-import/src/: lib.rs  postman.rs
crates/apex-mock/: Cargo.toml  README.md
crates/apex-mock/src/: lib.rs
crates/apex-plugins/: Cargo.toml  README.md
crates/apex-plugins/src/: lib.rs
crates/apex-protocols/: Cargo.toml  README.md
crates/apex-protocols/src/: graphql.rs  grpc.rs  lib.rs  stream.rs
crates/apex-quality/: Cargo.toml
crates/apex-quality/src/: lib.rs
crates/apex-runner/: Cargo.toml
crates/apex-runner/src/: assertion.rs  collection.rs  lib.rs  monitor.rs
crates/apex-scripting/: Cargo.toml  README.md
crates/apex-scripting/src/: lib.rs
crates/apex-secrets/: Cargo.toml
crates/apex-secrets/src/: lib.rs
crates/apex-security/: Cargo.toml
crates/apex-security/src/: lib.rs
crates/apex-test-support/: Cargo.toml
crates/apex-test-support/src/: lib.rs
crates/apex-ui/: Cargo.toml  README.md
crates/apex-ui/src/: lib.rs  session.rs  workspace_monitor.rs
crates/apex-variables/: Cargo.toml
crates/apex-variables/src/: lib.rs  workspace.rs
crates/apex-workspace/: Cargo.toml
crates/apex-workspace/src/: collection.rs  environment.rs  lib.rs  reconcile.rs  search.rs  watch.rs
docs/: architecture.md  build-status.md  checkpoint-manifest.md  cli.md  competitor-audit.md  extensions-and-ai.md  feature-matrix.md  file-format.md  gpui-audit.md  http-engine.md  import-export.md  migrations.md  packaging.md  phase-plan.md  plugin-model.md  release-checklist.md  release-status.md  scripting.md  security-model.md  troubleshooting.md  ui-shell.md
docs/schemas/: apex-request.schema.json  apex-variable-set.schema.json  apex-workspace.schema.json
fixtures/curl/: create-user.sh
fixtures/workspace/: apex.toml  variables.toml
fixtures/workspace/environments/: development.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: openapi.rs  wasm_plugin.rs
packaging/appimage/: AppRun  README.md  apex-api.desktop
packaging/arch/: PKGBUILD  README.md
packaging/debian/: README.md  control  rules
packaging/macos/: README.md
packaging/nix/: flake.nix
packaging/rpm/: README.md  apex-api.spec
packaging/windows/: README.md
scripts/: check.sh  validate-release-metadata.sh
