[workspace]
resolver = "3"
members = [
  "apps/apex",
  "apps/apex-cli",
  "crates/apex-domain",
  "crates/apex-auth",
  "crates/apex-variables",
  "crates/apex-secrets",
  "crates/apex-workspace",
  "crates/apex-runner",
  "crates/apex-scripting",
  "crates/apex-protocols",
  "crates/apex-contracts",
  "crates/apex-mock",
  "crates/apex-git",
  "crates/apex-plugins",
  "crates/apex-ai",
  "crates/apex-quality",
  "crates/apex-security",
  "crates/apex-import",
  "crates/apex-export",
  "crates/apex-http",
  "crates/apex-history",
  "crates/apex-test-support",
  "crates/apex-ui",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.96"
license = "Apache-2.0"

[workspace.dependencies]
async-channel = "2.5.0"
anyhow = "1.0.102"
gpui = { version = "0.2.2", features = ["wayland", "x11", "runtime_shaders"] }
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
async-compression = { version = "0.4.42", features = ["tokio", "gzip", "brotli", "zstd"] }
base64 = "0.22.1"
bytes = "1.12.0"
cookie_store = "0.22.1"
futures-util = "0.3.32"
http = "1.4.2"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "server", "http1", "http2"] }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "http2", "native-tokio", "ring", "tls12"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
notify = "7.0.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }
url = "2.5.8"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.dev]
debug = "limited"
codegen-units = 16

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
