[package]
name = "apex-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apex-domain = { path = "../apex-domain" }
apex-runner = { path = "../apex-runner" }
rusqlite.workspace = true
url.workspace = true

[lints]
workspace = true
