[package]
name = "apex-history"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apex-domain = { path = "../apex-domain" }
apex-runner = { path = "../apex-runner" }
apex-secrets = { path = "../apex-secrets" }
apex-workspace = { path = "../apex-workspace" }
rusqlite.workspace = true
serde_json.workspace = true
url.workspace = true

[lints]
workspace = true
