[package]
name = "apex-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
apex-domain = { path = "../apex-domain" }
apex-runner = { path = "../apex-runner" }
apex-variables = { path = "../apex-variables" }
async-compression.workspace = true
bytes.workspace = true
futures-util.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
tokio.workspace = true

[lints]
workspace = true
