[package]
name = "apex-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
async-channel.workspace = true
apex-ai = { path = "../apex-ai" }
apex-contracts = { path = "../apex-contracts" }
apex-git = { path = "../apex-git" }
apex-mock = { path = "../apex-mock" }
apex-plugins = { path = "../apex-plugins" }
apex-protocols = { path = "../apex-protocols" }
apex-domain = { path = "../apex-domain" }
apex-history = { path = "../apex-history" }
apex-import = { path = "../apex-import" }
apex-export = { path = "../apex-export" }
apex-http = { path = "../apex-http" }
apex-runner = { path = "../apex-runner" }
apex-secrets = { path = "../apex-secrets" }
apex-variables = { path = "../apex-variables" }
apex-workspace = { path = "../apex-workspace" }
gpui.workspace = true
gpui-component.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
