[package]
name = "apex-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apex-domain = { path = "../apex-domain" }
apex-secrets = { path = "../apex-secrets" }
notify.workspace = true
rusqlite.workspace = true
serde_json.workspace = true

[lints]
workspace = true
